--- a/composer.json
+++ b/composer.json
@@ -26,7 +26,8 @@
             "Database\\Seeders\\": "database/seeders/"
         },
         "files": [
-            "app/Helpers/ApiResponse.php"
+            "app/Helpers/ApiResponse.php",
+            "app/Helpers/select_enum.php"
         ]
     },
     "autoload-dev": {
